--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,55 @@
-
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vh;
-    height: 100vh;
-    /* background: radial-gradient(circle, darkmagenta, blueviolet); */
-    background: radial-gradient(circle, #A83CE7, #512CAF);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vh;
+  height: 100vh;
+  background: radial-gradient(circle, #a83ce7, #512caf);
 }
 
 #rectangle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     height: 100vh;
     display: block;
-    margin: auto;
+  }
+
+.btn-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 80%;
+  }
+
+.game-controls {
+  display: flex;
+  flex-direction: column;
 }
 
+#btn-img-3dDice {
+  height: 20px;
+}
+
+.game-controls button {
+  display: flex;
+  border: 2px solid;
+  border-color: rgba(255, 255, 255, 0.5) white white rgba(255, 255, 255, 0.5);
+  margin: 10px;
+  padding: 10px;
+  border-radius: 33px;
+  border: none;
+  background: linear-gradient(90deg, #7a1faa, #4f0082);
+  color: white;
+  font-size: 12px;
+  cursor: pointer;
+  width: 110px;
+  box-shadow: 5px 6px 11px #3c103c;
+  align-items: center;
+  justify-content: space-evenly;
+}
