--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
   width: 100vh;
   height: 100vh;
   background: radial-gradient(circle, #a83ce7, #512caf);
+  overflow: hidden;
 }
 
 #rectangle {
@@ -37,19 +38,39 @@ body {
 }
 
 .game-controls button {
-  display: flex;
-  border: 2px solid;
-  border-color: rgba(255, 255, 255, 0.5) white white rgba(255, 255, 255, 0.5);
-  margin: 10px;
-  padding: 10px;
-  border-radius: 33px;
-  border: none;
-  background: linear-gradient(90deg, #7a1faa, #4f0082);
-  color: white;
-  font-size: 12px;
-  cursor: pointer;
-  width: 110px;
-  box-shadow: 5px 6px 11px #3c103c;
-  align-items: center;
-  justify-content: space-evenly;
+    display: flex;
+    border: 0.2px solid;
+    border-color: rgba(255, 255, 255, 0.3) #ffffff4a #ffffff57 rgba(255, 255, 255, 0.3);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 33px;
+    background: linear-gradient(90deg, #7a1faa, #4f0082);
+    color: white;
+    font-size: 12px;
+    cursor: pointer;
+    width: 110px;
+    box-shadow: 5px 6px 11px #3c103c;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.status-container {
+    position: absolute;
+    top: calc(80% + 85px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    border: 2px solid;
+    margin: 5px;
+    padding: 1px;
+    border-radius: 33px;
+    border: none;
+    background: #0000008c;
+    color: white;
+    font-size: 15px;
+    /* max-width: fit-content; */
+    width: 180px;
+    /* max-width: fit-content; */
+    /* box-shadow: 5px 6px 11px #3c103c; */
+    align-items: center;
+    justify-content: space-evenly;
 }
