--- a/css/styles.css
+++ b/css/styles.css
@@ -9,24 +9,86 @@ body {
 }
 
 #rectangle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* height: 100vh; */
+  height: 1000px;
+  display: block;
+}
+
+#sec-1 {
+  height: 100%;
+}
+
+#player-1-box {
+  position: relative;
+  top: 10%;
+}
+
+#player-1-font {
+  position: absolute;
+  top: 10%; /* adjust as needed to position close to the top */
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.player-box-img {
+    /* position: relative; */
+    height: 280px;
+  }
+
+  .count-div {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 100vh;
-    display: block;
+    /* bottom: 250px; */
+    bottom: 38%;
+    left: 25%;
+    transform: translateX(-50%);
+    display: flex;
+    background: linear-gradient(90deg, #7a1faa, #4f0082);
+    border-radius: 50%;
+    height: 90px;
+    width: 90px;
+    align-items: center;
+    justify-content: center;
+    color: white;
   }
 
 .btn-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 80%;
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80%;
+  align-items: center;
+}
+
+.title-div {
+  position: relative;
+  top: calc(-10% + 60px); /* adjust the 60px as needed */
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  border: 0.2px solid;
+  border-color: rgba(255, 255, 255, 0.3) #ffffff4a #ffffff57
+    rgba(255, 255, 255, 0.3);
+  /* margin: 10px; */
+  padding: 10px;
+  border-radius: 33px;
+  border: none;
+  background: linear-gradient(90deg, #7a1faa, #4f0082);
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  width: 135px;
+  box-shadow: 5px 6px 11px #3c103c;
+  align-items: center;
+  justify-content: space-evenly;
+}
 
 .game-controls {
   display: flex;
@@ -38,39 +100,40 @@ body {
 }
 
 .game-controls button {
-    display: flex;
-    border: 0.2px solid;
-    border-color: rgba(255, 255, 255, 0.3) #ffffff4a #ffffff57 rgba(255, 255, 255, 0.3);
-    margin: 10px;
-    padding: 10px;
-    border-radius: 33px;
-    background: linear-gradient(90deg, #7a1faa, #4f0082);
-    color: white;
-    font-size: 12px;
-    cursor: pointer;
-    width: 110px;
-    box-shadow: 5px 6px 11px #3c103c;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  border: 0.2px solid;
+  border-color: rgba(255, 255, 255, 0.3) #ffffff4a #ffffff57
+    rgba(255, 255, 255, 0.3);
+  margin: 10px;
+  padding: 10px;
+  border-radius: 33px;
+  background: linear-gradient(90deg, #7a1faa, #4f0082);
+  color: white;
+  font-size: 12px;
+  cursor: pointer;
+  width: 110px;
+  box-shadow: 5px 6px 11px #3c103c;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .status-container {
-    position: absolute;
-    top: calc(80% + 85px);
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    border: 2px solid;
-    margin: 5px;
-    padding: 1px;
-    border-radius: 33px;
-    border: none;
-    background: #0000008c;
-    color: white;
-    font-size: 15px;
-    /* max-width: fit-content; */
-    width: 180px;
-    /* max-width: fit-content; */
-    /* box-shadow: 5px 6px 11px #3c103c; */
-    align-items: center;
-    justify-content: space-evenly;
+  position: absolute;
+  top: calc(80% + 85px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  border: 2px solid;
+  margin: 5px;
+  padding: 1px;
+  border-radius: 33px;
+  border: none;
+  background: #0000008c;
+  color: white;
+  font-size: 15px;
+  /* max-width: fit-content; */
+  width: 180px;
+  /* max-width: fit-content; */
+  /* box-shadow: 5px 6px 11px #3c103c; */
+  align-items: center;
+  justify-content: space-evenly;
 }
