--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ body {
 
 #sec-1 {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #player-1-box {
@@ -47,12 +49,18 @@ body {
     transform: translateX(-50%);
     display: flex;
     background: linear-gradient(90deg, #7a1faa, #4f0082);
+    border: .5px solid #ffffffd4;
     border-radius: 50%;
     height: 90px;
     width: 90px;
     align-items: center;
     justify-content: center;
     color: white;
+  }
+
+  .count-div h2 {
+    font-size: 40px;
+    font-family: 'Pixelify Sans', sans-serif;
   }
 
 .btn-container {
