--- a/css/dice_style.css
+++ b/css/dice_style.css
@@ -1,132 +1,164 @@
-.main-dice-container {
+#left-dice-container {
     display: flex;
-}
-
-.container {
-    position: relative;
-    display: inline-block;
-    /* display: flex; */
-    top: 200px;
-}
-
-.dice {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    transform-style: preserve-3d;
-    transition: transform 1s;
-}
-
-.dot {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    margin: -10px 5px 5px -10px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 560px;
+    width: 448px;
+    /* background-color: yellow; */
     border-radius: 20px;
-    background-color: blueviolet;
-    box-shadow: inset 2px 2px #60047c;
-}
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-right: 1px solid black;
+  }
 
-.dice-one {
-    position: absolute;
-    left: 150px;
-}
+  #right-dice-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 560px;
+    width: 448px;
+    /* background-color: rgb(109, 36, 218); */
+    border-radius: 20px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: 1px solid black;
+  }
+  
+  #left-dice-div {
+    display: flex;
+    width: 57%;
+    justify-content: space-around;
+  }
 
-.dice-two {
-    position: absolute;
-    left: -50px;
-}
+    #right-dice-div {
+        display: flex;
+        width: 57%;
+        justify-content: space-around;
+    }
+  
+  .right-field-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 560px;
+    width: 448px;
+    /* background-color: green; */
+    /* background-color: violet; */
+    border-radius: 20px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: 1px solid black;
+  }
 
-.face {
+ 
+  
+  .dice, .dice-R{
+    /* position: relative;
+    width: 70px;
+    height: 70px;
+    transform-style: preserve-3d;
+    transform: rotateX(-20deg) rotateY(45deg); */
+    transition: transform .5s ease-in-out;
+  }
+
+
+  
+  .left-dice {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    transform-style: preserve-3d;
+    transform: rotateX(-20deg) rotateY(45deg);
+  }
+  
+  .right-dice {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    transform-style: preserve-3d;
+    transform: rotateX(-20deg) rotateY(45deg);
+  }
+  
+  .face {
     position: absolute;
-    background-color: #fff;
-    border-radius: 5px;
-    width: 100px;
-    height: 100px;
-    border: 1px solid #e5e5e5;
+    width: 70px;
+    height: 70px;
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    line-height: 70px;
     text-align: center;
-    line-height: 2em;
-}
-
-.face:nth-child(1) {
-    transform: translateZ(3)
-}
-
-.face:nth-child(6) {
-    transform: translateY(-90deg) translateZ(3.1em);
-}
-
-.face:nth-child(3) {
-    transform: rotateY(-90deg) translateZ(3.1em);
-}
-
-.face:nth-child(4) {
-    transform: rotateX(90deg) translateZ(3.1em);
-}
-
-.face:nth-child(5) {
-    transform: rotateX(-90deg) translateZ(3.1em);
-}
-
-.face:nth-child(2) {
-    transform: rotateY(-180deg) translateZ(3.1em);
-}
-
-.show-1 {
-    transform: rotateX(720deg) rotateZ(-720deg);
-}
-
-.show-6 {
-    transform: rotateX(-900deg) rotateZ(1080deg);
-}
-
-.show-3 {
-    transform: rotateY(-450deg) rotateZ(-1440deg);
-}
-
-.show-4 {
-    transform: rotateY(810deg) rotateZ(720deg);
-}
-
-.show-5 {
-    transform: rotateX(-810deg) rotateZ(-1080deg);
-}
-
-.show-2 {
-    transform: rotateX(450deg) rotateZ(-720deg);
-}
-
-.two-1, .three-1, .four-1, .five-1, .six-1 {
-    top: 20%;
-    left: 20%;
-}
-
-.four-3, .five-3, .six-4 {
-    top: 20%;
-    left: 80%;
-}
-
-.one-1, .three-2, .five-5{
-    top: 50%;
-    left: 50%;
-}
-
-.four-2, .five-2, .six-3 {
-    top: 80%;
-    left: 20%;
-}
-
-.two-2, .three-3, .four-4, .five-4, .six-6 {
-    top: 80%;
-    left: 80%;
-}
-
-.six-2 {
-    top: 50%;
-    left: 20%;
-}
-
-.six-5 {
-    top: 50%;
-    left: 80%;
-}
+    font-size: 1.4em;
+  }
+  
+  .one {
+    transform: translateZ(35px);
+  }
+  
+  .six {
+    transform: rotateY(180deg) translateZ(35px);
+  }
+  
+  .three {
+    transform: rotateY(90deg) translateZ(35px);
+  }
+  
+  .four {
+    transform: rotateY(-90deg) translateZ(35px);
+  }
+  
+  .five {
+    transform: rotateX(90deg) translateZ(35px);
+  }
+  
+  .two {
+    transform: rotateX(-90deg) translateZ(35px);
+  }
+  
+  .dot {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: black;
+    border-radius: 50%;
+  }
+  
+  .top-left {
+    top: 10px;
+    left: 10px;
+  }
+  
+  .top-center {
+    top: 10px;
+    left: 30px;
+  }
+  
+  .top-right {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .center {
+    top: 30px;
+    left: 30px;
+  }
+  
+  .bottom-left {
+    bottom: 10px;
+    left: 10px;
+  }
+  
+  .bottom-center {
+    bottom: 10px;
+    left: 30px;
+  }
+  
+  .bottom-right {
+    bottom: 10px;
+    right: 10px;
+  }
+  
+  
