--- a/css/dice_style.css
+++ b/css/dice_style.css
@@ -1,35 +1,10 @@
-#left-dice-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 560px;
-    width: 448px;
-    /* background-color: yellow; */
-    border-radius: 20px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    border-right: 1px solid black;
-  }
 
-  #right-dice-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 560px;
-    width: 448px;
-    /* background-color: rgb(109, 36, 218); */
-    border-radius: 20px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-left: 1px solid black;
-  }
-  
   #left-dice-div {
+    position: relative;
+    top: 34%;
     display: flex;
-    width: 57%;
-    justify-content: space-around;
+    width: 83%;
+    justify-content: space-evenly;
   }
 
     #right-dice-div {
@@ -37,23 +12,6 @@
         width: 57%;
         justify-content: space-around;
     }
-  
-  .right-field-wrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 560px;
-    width: 448px;
-    /* background-color: green; */
-    /* background-color: violet; */
-    border-radius: 20px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-left: 1px solid black;
-  }
-
- 
   
   .dice, .dice-R{
     /* position: relative;
@@ -86,13 +44,51 @@
     position: absolute;
     width: 70px;
     height: 70px;
-    background: white;
-    border: 1px solid #ccc;
+    /* background: white; */
+    /* background: linear-gradient(145deg, #7a1faa, #4f0082); */
+    background: linear-gradient(145deg, #dddbd8, #ffffff);
+    /* border: 1px solid #ccc; */
+    border-radius: 16px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     line-height: 70px;
     text-align: center;
     font-size: 1.4em;
   }
+
+  .face::after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 70px;
+    height: 70px;
+    background: #ebe7e4;
+    z-index: -100;
+    border-radius: 9px;
+    box-shadow: 0 0 5px rgb(244 233 255 / 30%);
+}
+
+  /* .face::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 70px;
+    height: 70px;
+    background: #f6f3f0;
+
+  } */
+
+  /* .face::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 70px;
+    height: 70px;
+    background: #d88532;
+
+  } */
   
   .one {
     transform: translateZ(35px);
@@ -122,7 +118,7 @@
     position: absolute;
     width: 10px;
     height: 10px;
-    background: black;
+    background: #7d3ea5;
     border-radius: 50%;
   }
   
