--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,31 @@ body {
   display: block;
 }
 
-#sec-1 {
+.section-1 {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#player-1-box {
+/* #sec-2 {
+    position: absolute;
+    left: 55%;
+} */
+#sec-2 {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    height: 100%;
+    /* width: fit-content; */
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+#player-1-box, #player-2-box {
   position: relative;
   top: 10%;
 }
