--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,24 +6,49 @@ body {
   height: 100vh;
   background: radial-gradient(circle, #a83ce7, #512caf);
   overflow: hidden;
-}
+} */
+
+body {
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle, #a83ce7, #512caf);
+    overflow: hidden;
+  }
+  
+  #wrapper {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column; /* stack the elements vertically */
+    justify-content: center; /* center the elements vertically */
+    align-items: stretch; /* center the elements horizontally */
+    gap: 20px; /* create space between the elements */
+  }
 
 #rectangle {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* height: 100vh; */
-  height: 1000px;
+  height: 100vh;
+  max-height: 1000px;
   display: block;
 }
 
 .section-1 {
+    position: absolute;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* .section-1 {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 /* #sec-2 {
     position: absolute;
@@ -31,11 +56,12 @@ body {
 } */
 #sec-2 {
     position: absolute;
-    right: 0;
+    /* right: 25%; */
+    right: 50px;
     top: 50%;
     height: 100%;
-    /* width: fit-content; */
     transform: translateY(-50%);
+    /* transform: translateY(-50%) translateX(-50%); */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -47,12 +73,19 @@ body {
   top: 10%;
 }
 
-#player-1-font {
+#player-1-font, #player-2-font {
   position: absolute;
   top: 10%; /* adjust as needed to position close to the top */
   left: 50%;
   transform: translateX(-50%);
 }
+
+/* #player-2-font {
+  position: absolute;
+  top: 10%; 
+  left: 50%;
+  transform: translateX(-50%);
+} */
 
 .player-box-img {
     /* position: relative; */
