--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 10%;
 }
 
 /* .section-1 {
@@ -96,8 +97,8 @@ body {
     position: absolute;
     /* bottom: 250px; */
     bottom: 38%;
-    left: 25%;
-    transform: translateX(-50%);
+    /* left: 25%; */
+    /* transform: translateX(-50%); */
     display: flex;
     background: linear-gradient(90deg, #7a1faa, #4f0082);
     border: .5px solid #ffffffd4;
