worked on dice and trying to position the dice back to initial state when inactive player

--- a/css/active-inactive.css
+++ b/css/active-inactive.css
@@ -1,6 +1,7 @@
  /* active styles */
  .active-player {
-    box-shadow: 0 0 10px 5px #00ff00; /* Green glow */
+    /* box-shadow: 0 0 10px 5px #00ff00;  */
+    opacity: 1;
 }
 
 .inactive-player {
