--- a/css/dice_style.css
+++ b/css/dice_style.css
@@ -12,7 +12,7 @@
         width: 57%;
         justify-content: space-around; */
         position: relative;
-        /* top: 34%; */
+        top: -10%;
         display: flex;
         width: 83%;
         justify-content: space-evenly;
