--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@
 } */
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
     width: 100vw;
     height: 100vh;
     background: radial-gradient(circle, #a83ce7, #512caf);
@@ -18,6 +21,7 @@ body {
   #wrapper {
     position: relative;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column; /* stack the elements vertically */
     justify-content: center; /* center the elements vertically */
@@ -44,6 +48,10 @@ body {
     margin-left: 10%;
 }
 
+/* .section-2 {
+  margin-right: 5%;
+} */
+
 /* .section-1 {
   height: 100%;
   display: flex;
@@ -55,18 +63,21 @@ body {
     position: absolute;
     left: 55%;
 } */
-#sec-2 {
+
+/* changed from #sec-2 to section-2 */
+.section-2 {
     position: absolute;
     /* right: 25%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 5%;
     right: 50px;
     top: 50%;
     height: 100%;
     transform: translateY(-50%);
     /* transform: translateY(-50%) translateX(-50%); */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
   }
 
 #player-1-box, #player-2-box {
