--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,14 @@ body {
 
   .count-div h2 {
     font-size: 40px;
-    font-family: 'Pixelify Sans', sans-serif;
+    /* font-family: 'Pixelify Sans', sans-serif; */
+  font-family: "Honk", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "MORF" 15,
+    "SHLN" 50;
   }
 
 .btn-container {
