--- a/css/winner_display.css
+++ b/css/winner_display.css
@@ -1,12 +1,38 @@
 /* #player2-win-box {
    
 } */
+#bg-win-vector-left {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.7;
+    display: none;
+}
+
+#bg-win-vector-right {
+    position: absolute;
+    height: 100%;
+    /* width: 100%; */
+    opacity: 0.7;
+    display: none;
+}
+
 
 #trophy-player2 {
   height: 90px;
   position: absolute;
   left: 73%;
   top: 18%;
+  z-index: 100;
+}
+
+#winner-image-1 {
+  position: absolute;
+  display: block;
+  left: 66%;
+  top: 29%;
+  height: 62px;
+  z-index: 100;
 }
 
 #winner-image-2 {
