--- a/css/styles.css
+++ b/css/styles.css
@@ -73,19 +73,20 @@ body {
 
 /* changed from #sec-2 to section-2 */
 .section-2 {
-    position: absolute;
-    /* right: 25%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 5%;
-    right: 50px;
-    top: 50%;
-    height: 100%;
-    transform: translateY(-50%);
-    /* transform: translateY(-50%) translateX(-50%); */
-  }
+  position: absolute;
+  /* right: 25%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 5%;
+  right: -109px;
+  top: 50%;
+  height: 100%;
+  width: 50%;
+  transform: translateY(-50%);
+  /* transform: translateY(-50%) translateX(-50%); */
+}
 
 #player-1-box, #player-2-box {
   position: relative;
