--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,8 @@ body {
     flex-direction: column;
     align-items: center;
     margin-left: 10%; */
+   background-image: url("../assets/graph_vector.png.png");
+   
     position: absolute;
     height: 100%;
     width: 50%;
@@ -112,16 +114,19 @@ body {
     height: 280px;
   }
   #player1-header {
+    display: flex;
     position: absolute;
     top: -16%;
     left: 50%;
     transform: translateX(-50%);
     font-size: 57px;
+    width: 100%;
     font-family: "Honk", system-ui;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings: "MORF" 15, "SHLN" 50;
+    justify-content: center;
   }
 
   #player2-header {
